--- a/package.json
+++ b/package.json
@@ -1,33 +1,50 @@
 {
-	"name": "my-hyperdev-app",
-	"version": "0.0.1",
-	"description": "What am I about?",
-	"main": "server.js",
-	"scripts": {
-		"start": "node server.js"
-	},
-	"dependencies": {
-		"express": "^4.14.0",
-		"cors": "^2.8.1",
-		"body-parser": "^1.15.2",
-		"chai": "^3.5.0",
-		"mongodb": "^2.2.16",
-		"chai-http": "^3.0.0",
-		"mocha": "^3.2.0",
-		"zombie": "^5.0.5",
-		"helmet": "^3.1.0"
-	},
-	"engines": {
-		"node": "4.4.3"
-	},
-	"repository": {
-		"type": "git",
-		"url": "https://hyperdev.com/#!/project/welcome-project"
-	},
-	"keywords": [
-		"node",
-		"hyperdev",
-		"express"
-	],
-	"license": "MIT"
+  "name": "issue-tracker-api",
+  "version": "1.0.0",
+  "description": "An API and user interface to track, update, and delete issues.",
+  "main": "server.js",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "browser-sync": "^2.26.7",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "mocha": "^6.2.0",
+    "mongodb": "^3.3.2",
+    "mongoose": "^5.7.1",
+    "node-fetch": "^2.6.0",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "mocha test",
+    "start": "nodemon server.js",
+    "dev-server": "browser-sync start --proxy localhost:3000 --files 'public/*.css, views/*.html, routes/*.js, controllers/*.js, models/*.js'",
+    "sass": "sass --watch sass/style.scss:public/styles.css"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jrwmacintire/issue-tracker-api.git"
+  },
+  "keywords": [
+    "Node",
+    "Express",
+    "Fetch",
+    "Sass",
+    "Browser-sync",
+    "Mocha",
+    "Chai"
+  ],
+  "author": "John MacIntire",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/jrwmacintire/issue-tracker-api/issues"
+  },
+  "homepage": "https://github.com/jrwmacintire/issue-tracker-api#readme"
 }
